<resources>
    <string name="app_name">XPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_sqlSearching">資料中心</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sqlSearching">資料中心</string>

    <!--Login.xml-->
    <string name="login_acc_text">收銀員</string>
    <string name="login_acc_hint">請輸入帳號</string>
    <string name="login_pas_text">密碼</string>
    <string name="login_pas_hint">請輸入密碼</string>

    <!--通用-->
    <string name="txt_login">登入</string>
    <string name="txt_query">選擇欄位</string>
    <string name="title_activity_sql_searching">歡迎來到資料中心</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!--AlertDialoge類型-->
    <string name="btn_positive">確定</string>
    <string name="btn_negative">取消</string>

    <!--資料庫按鈕-->
    <string name="button_add">新增資料</string>
    <string name="button_upgrade">修改</string>
    <string name="button_delete">刪除</string>
    <string name="button_clear">清除</string>
    <string name="button_search">搜尋</string>
    <string name="data_modify_hint">請輸入你內容</string>

    <!--資料庫種類-->
    <string-array name="database_type">
        <!--如果增加用戶欄位務必重新安裝，以更新預設用戶資訊-->

        <!--還在考慮是否要能自動新增欄位(可能會產生空值、還有刪除的一系列問題)-->
        <!--primary key lock-->
        <item>User</item> <!--用戶資料 (Uid,Uname,account, password)--> <!--User為操作者也就是店員，帳1密皆為整數型別-->
        <item>Product</item> <!--商品項目，包含庫存 (Pid,Pname, Pnumber, Pphoto)-->
        <item>Transaction</item> <!--交易紀錄 (tId, tDatetime, tDescription-->
    </string-array>

    <!--UserDB欄位-->
    <string-array name="UserDBitems">
        <item>uId</item>
        <item>uName</item>
        <item>account</item>
        <item>password</item>
    </string-array>

    <!--ProductDB欄位-->
    <string-array name="ProductDBitems">
        <item>pId</item>
        <item>pName</item>
        <item>pPrice</item>
        <item>pNumber</item>
        <item>pPhoto</item>
    </string-array>

    <!--ProductDB欄位-->
    <string-array name="TransactionDBitems">
        <item>tId</item>
        <item>tDate</item>
        <item>tDescription</item>
    </string-array>


</resources>